--- a/project_main.ipynb
+++ b/project_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -92,46 +92,6 @@
        "      <td>2017</td>\n",
        "      <td>15.66</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>4</td>\n",
-       "      <td>GDP</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>3.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Government Expenditure</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>11.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>GDP</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>3.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Government Expenditure</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>11.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>8</td>\n",
-       "      <td>GDP</td>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>3.27</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -142,15 +102,10 @@
        "1          4                     GDP  Afghanistan  2010                 3.46\n",
        "2          4  Government Expenditure  Afghanistan  2015                12.51\n",
        "3          4                     GDP  Afghanistan  2015                 3.24\n",
-       "4          4  Government Expenditure  Afghanistan  2017                15.66\n",
-       "5          4                     GDP  Afghanistan  2017                 3.93\n",
-       "6          8  Government Expenditure      Albania  2005                11.36\n",
-       "7          8                     GDP      Albania  2005                 3.24\n",
-       "8          8  Government Expenditure      Albania  2007                11.18\n",
-       "9          8                     GDP      Albania  2007                 3.27"
+       "4          4  Government Expenditure  Afghanistan  2017                15.66"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,12 +134,12 @@
     "clean_df =clean_df.reset_index(drop=True)\n",
     "#Display the data frame\n",
     "\n",
-    "clean_df.head(10)\n"
+    "clean_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -266,46 +221,6 @@
        "      <td>2015</td>\n",
        "      <td>1487.20</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>760</td>\n",
-       "      <td>Food</td>\n",
-       "      <td>Syrian Arab Republic</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>807.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>862</td>\n",
-       "      <td>General</td>\n",
-       "      <td>Venezuela (Boliv. Rep. of)</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>772.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>760</td>\n",
-       "      <td>General</td>\n",
-       "      <td>Syrian Arab Republic</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>662.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>90</td>\n",
-       "      <td>Food</td>\n",
-       "      <td>Solomon Islands</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>555.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>90</td>\n",
-       "      <td>Food</td>\n",
-       "      <td>Solomon Islands</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>552.52</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -316,15 +231,10 @@
        "1        728     Food                 South Sudan  2017  4574.02\n",
        "2        728     Food                 South Sudan  2016  1660.87\n",
        "3        728  General                 South Sudan  2016  1592.38\n",
-       "4        862     Food  Venezuela (Boliv. Rep. of)  2015  1487.20\n",
-       "5        760     Food        Syrian Arab Republic  2016   807.30\n",
-       "6        862  General  Venezuela (Boliv. Rep. of)  2015   772.02\n",
-       "7        760  General        Syrian Arab Republic  2016   662.90\n",
-       "8         90     Food             Solomon Islands  2016   555.40\n",
-       "9         90     Food             Solomon Islands  2015   552.52"
+       "4        862     Food  Venezuela (Boliv. Rep. of)  2015  1487.20"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,12 +268,12 @@
     "cpi_df =cpi_df.reset_index(drop=True)\n",
     "\n",
     "#Display the data frame\n",
-    "cpi_df.head(10)"
+    "cpi_df.head() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -460,7 +370,7 @@
        "4          2  GDP (millions of $)       Africa  2015  2293977.0"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -611,7 +521,7 @@
        "4        202  GDP(%)  Sub-Saharan Africa  2010                     0.4"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +674,7 @@
        "4               1.0  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +821,7 @@
        "4          2  Female Labour Force       Africa  2005                    53.5"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
