--- a/project_main.ipynb
+++ b/project_main.ipynb
@@ -972,7 +972,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1690,12 +1692,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Crime: Homicides\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Crime: Homicides\n"
+    "#By country - mean spending per country "
    ]
   }
  ],
