--- a/project_visualizations.ipynb
+++ b/project_visualizations.ipynb
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "#Read in the merged datafram files\n",
+    "#Read in the merged dataframe files\n",
     "merge1 = pd.read_csv(\"data_source/merge_data/public_education_cpi.csv\")\n",
     "public_education_cpi = pd.DataFrame(merge1)\n",
     "public_education_cpi.head()"
