--- a/project_data_clean_up.ipynb
+++ b/project_data_clean_up.ipynb
@@ -1515,7 +1515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Loading merged data frames into the CSv file\n",
+    "#Loading merged data frames into the csv file\n",
     "public_education_cpi.to_csv('data_source/merge_data/public_education_cpi.csv', index = False, header=True)\n",
     "public_education_crime.to_csv('data_source/merge_data/public_education_crime.csv', index = False, header=True)\n",
     "public_education_gdp.to_csv('data_source/merge_data/public_education_gdp.csv', index = False, header=True)\n",
